src/objects/Case_User__c.object
<CustomObject>
    <fields>
        <fullName>Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableUsers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AvailableUsers</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Case_Allocated_Time__c</fullName>
        <label>Last Case Allocated Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SkillSet__c</fullName>
        <label>SkillSet</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Hardware Support</fullName>
                </value>
                <value>
                    <fullName>Software Support</fullName>
                </value>
                <value>
                    <fullName>Technical Expertise</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timings__c</fullName>
        <label>Timings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6:00AM-3:00PM</fullName>
                </value>
                <value>
                    <fullName>9:00AM-6:00PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM-11:00PM</fullName>
                </value>
                <value>
                    <fullName>6:00PM-3:00AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case User</label>
    <listViews>
        <fullName>view1</fullName>
        <columns>NAME</columns>
        <columns>SkillSet__c</columns>
        <columns>AvailableUsers__c</columns>
        <columns>Availability__c</columns>
        <columns>Timings__c</columns>
        <columns>Last_Case_Allocated_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>view1</label>
    </listViews>
    <nameField>
        <label>CaseUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>